<resources>
    <string name="app_name">AriaHelper</string>
    <string name="app_description">AriaHelper is a student project made in Mobile Development\'s course.\n\n2020–2021 He-Arc, Neuchâtel, Switzerland.</string>
    <string name="hearc_logo_description">He-arc logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_lootdm">Trésor</string>
    <string name="menu_loot_char">Sac</string>
    <string name="menu_about">À propos</string>
    <string name="loot_details">Details</string>
    <string name="loot_add">Ajouter loot</string>
    <string name="App_name">Aria Helper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Zero_value">0</string>
    <string name="Base_Textview">Text View</string>
    <string name="image_character_description">Image of the currently chosen character</string>
    <string name="dice_value_6">D6</string>
    <string name="dice_value_10">D10</string>
    <string name="dice_value_100">D100</string>
    <string name="gold_coin_desc">Gold coin icon</string>
    <string name="silver_coin_desc">Silver coin icon</string>
    <string name="bronze_coin_desc">Bronze coin icon</string>

    <string name="item_quality_0">Poor</string>
    <string name="item_quality_1">Common</string>
    <string name="item_quality_2">Rare</string>
    <string name="item_quality_3">Epic</string>
    <string name="item_quality_4">Legendary</string>
    <string name="item_quality_5">Quest</string>
    <string name="item_submit">Submit</string>
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="item_img">Object logo</string>
    <string name="item_edit">Edit</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attribute_update_title">Modifier un attribut</string>
    <string name="button_confirm">Confirmer</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_settings_description">Bouton pour accéder aux paramètres du personnage (modifier, supprimer)</string>
    <string name="skill_update_title">Modifier un talent</string>
    <string name="menu_char">Personnage</string>s
    <string name="menu_char_settings">Personnage - paramètres</string>
    <string name="menu_attribute">Personnage - attribut</string>
    <string name="menu_skill">Personnage - talent</string>
    <string name="button_rename_text">renommer</string>
    <string name="settings_title">Paramètres du personnage</string>
    <string name="character_name_settings_textview">"Nom du personnage : "</string>
    <string name="base_name_settings_textview">nom</string>
    <string name="character_settings_textview_text">"ID du personnage : "</string>
    <string name="level_textview_title">"Niveau : "</string>
    <string name="custom_dice_text">autre</string>
    <string name="refresh_string">Refresh</string>
    <string name="cancel_string">Cancel</string>
    <string name="modal_wifi_title">Connection joueur</string>
    <string name="stop_refresh_string">Stop</string>
    <string name="Switch_p2p_name">Item exchange</string>
    <string name="add_txt">Ajouter</string>
    <string name="transfer_txt">Transférer</string>
    <string name="button_add_description">Bouton \"+\" qui permet d\'ajouter un nouvel item</string>
    <string name="button_transfer_decription">Bouton qui permet de transférer les items séléectionnés</string>
    <string name="treasure_send_txt">Envoyer trésor</string>
    <string name="group_character_title">Principal</string>
    <string name="group_DM_title">Maître du donjon</string>
</resources>