<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <item android:title="@string/group_character_title">
            <menu>
                <group android:id="@+id/menuCharacter"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_character"
                        android:icon="@drawable/dnd_icon"
                        android:title="@string/menu_char" />
                    <item
                        android:id="@+id/nav_character_loot"
                        android:icon="@drawable/bag_icon_2"
                        android:title="@string/menu_loot_char" />
                </group>
            </menu>
        </item>

        <item android:title="@string/group_DM_title">
            <menu>
                <group android:id="@+id/menuDM"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_lootdm"
                        android:icon="@drawable/chest_icon"
                        android:title="@string/menu_lootdm" />
                </group>
            </menu>
        </item>

    <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about" />
</menu>