<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loot.character.CharacterBagFragment">

    <fragment
        android:id="@+id/fragListItem"
        android:name="ch.hearc.ariahelper.ui.loot.shared.ItemFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_item_list" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBadAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layoutBagTransfer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textviewBagAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_txt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/btnBagAdd"
                android:layout_width="@dimen/bag_icon_dimensions"
                android:layout_height="@dimen/bag_icon_dimensions"
                android:adjustViewBounds="true"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/button_add_description"
                android:scaleType="centerInside"
                android:src="@drawable/add"
                app:layout_constraintBottom_toTopOf="@+id/textviewBagAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBagTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutBadAdd"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBagTransfer"
                android:layout_width="@dimen/bag_icon_dimensions"
                android:layout_height="@dimen/bag_icon_dimensions"
                android:adjustViewBounds="true"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/button_transfer_decription"
                android:scaleType="centerInside"
                android:src="@drawable/transfer_selector_disablegrey"
                app:layout_constraintBottom_toTopOf="@+id/textviewBagTransfer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textviewBagTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_txt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>